# openemr

./: .gitignore  README.md
.claude/: settings.json
agent/: .dockerignore  Dockerfile  pyproject.toml
agent/eval/: test_cases.yaml
agent/frontend/: Dockerfile  streamlit_app.py
agent/scripts/: seed_test_data.py  test_auth.py
agent/src/: __init__.py  config.py  main.py
agent/src/agent/: __init__.py  graph.py
agent/src/auth/: __init__.py  oauth2.py
agent/src/tools/: __init__.py  allergy_check.py  drug_interaction_check.py  patient_lookup.py
agent/src/verification/: __init__.py  scope_guard.py
agent/tests/: test_eval.py  test_graph_scope_guard.py  test_scope_guard.py  test_tools.py
evals/: test_cases.yaml
